# MC-VQE

./: CMakeLists.txt  README.md  matrix_elements.py  run.sh
data/1/: bcha.xyz
data/10/: bcha.xyz
data/11/: bcha.xyz
data/12/: bcha.xyz
data/13/: bcha.xyz  start
data/14/: bcha.xyz
data/15/: bcha.xyz
data/16/: bcha.xyz
data/17/: bcha.xyz
data/18/: bcha.xyz
data/2/: bcha.xyz
data/3/: bcha.xyz
data/4/: bcha.xyz
data/5/: bcha.xyz
data/6/: bcha.xyz
data/7/: bcha.xyz
data/8/: bcha.xyz
data/9/: bcha.xyz
examples/: 18_qubit_datafile.txt  2_qubit_datafile.txt  2_qubit_datafile_response.txt  60_qubit_datafile.txt  CMakeLists.txt  mc_vqe_demo.in.cpp  mc_vqe_example.cpp  mc_vqe_example.in.cpp
src/: CMakeLists.txt  Monomer.cpp  Monomer.hpp  manifest.json  mc-vqe-activator.cpp  mc-vqe-circuits.cpp  mc-vqe-hamiltonians.cpp  mc-vqe-minimize-gradients.cpp  mc-vqe-response.cpp  mc-vqe.cpp  mc-vqe.hpp  monomer.cpp
src/importable/: ImportFromTestFile.hpp
src/tests/: CMakeLists.txt  MCVQETester.in.cpp
vqe/: vqe.cpp
